styles/Home.module.css
/* ================ Navbar ================ */
.nav-dropdown {
  width: 100%;
  background-color: white;
  padding: 0;
  border-radius: 5px;
  max-height: 0;
  overflow: hidden;
  transition: max-height 0.3s ease-out, padding 0.1s ease-out;
}
.nav-dropdown.open {
  max-height: 500px;
  padding: 4px;
  transition: max-height 0.3s ease-in, padding 0.1s ease-in;
}

.nav-link{
  /* color: var(--brand-purple); */
  color: #fff;
}

.nav-link:hover{
  color: var(--brand-neonorange);
  text-shadow: 
  0 0 5px currentColor, 
  0 0 10px currentColor, 
  0 0 15px currentColor;
  transition: ease-in-out 0.9s;
}

.nav-link-icon:hover{
  fill: var(--brand-neonpurple);
  filter: drop-shadow(0 0 5px var(--brand-neonorange)) drop-shadow(0 0 10px var(--brand-neonorange)) drop-shadow(0 0 15px var(--brand-neonorange));
  transition: ease-in-out 0.9s;
}

.nav-link-active{
  /* color: var(--brand-neonorange) !important;
  border-bottom: 2px solid var(--brand-neonorange); */
  /* color: #fff !important; */
  border-bottom: 2px solid  #fff;
}

.nav-collapse{
  height: 144.14px !important;
  transition: height 0.3s ease-in-out !important;
  position: fixed !important;
}

.nav-expand{
  height: 108.1px !important;
  transition: height 0.3s ease-in-out !important;

}

.nav-link-btn{
  /* border: solid 2px var(--brand-purple); */
  border: solid 2px #fff;
  /* color: var(--brand-purple); */
  color: #fff;
  border-radius: 2.5px;
  padding: 2px 5px;
  transition: ease-in-out 0.3s;
}

.nav-link-btn:hover{
  color: var(--brand-neonorange);
  text-shadow: 
  0 0 5px currentColor, 
  0 0 10px currentColor, 
  0 0 15px currentColor;
  background-color: var(--brand-purple);
  border: solid 2px currentColor;
  transition: all ease-in-out 0.9s;
}

/* ================ Footer ================ */
.footer{
  width: 100vw;
  min-height: 40px;
  background-color: white;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
}

.footer-nav{
  width: 100%;  
  display: flex;
  justify-content: space-between;
}

.footer-nav-info{
  width: 100%; 
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding-left: 10px;
  padding-right: 10px;
}

@media (max-width: 645px) {
  .footer-nav-info{
    flex-direction: column;
    align-items: center;
  }
}

.footer-nav-info-address{
  margin-right: 5em;
}

@media (max-width: 645px) {
  .footer-nav-info-address{
    margin-right: 0;
  }
}

.footer-nav-socials{
  display: flex;
}

.footer-copyright{

}

/* ================ Neon Text ================ */
.neonpurple-text {
  font-size: 3rem;
  color: var(--brand-neonpurple);
  text-shadow: 
    0 0 5px currentColor, 
    0 0 10px #fff, 
    0 0 15px currentColor, 
    0 0 20px currentColor, 
    0 0 25px currentColor, 
    0 0 30px currentColor, 
    0 0 35px currentColor;
  animation: purple-glow 3s ease-in-out infinite alternate;
}

.neonorange-text {
font-size: 3rem;
color: var(--brand-neonorange);
text-shadow: 
  0 0 5px currentColor, 
  0 0 10px #fff, 
  0 0 15px #fff, 
  0 0 20px #fff, 
  0 0 25px currentColor, 
  0 0 30px currentColor, 
  0 0 35px currentColor;
animation: orange-glow  5s ease-in-out infinite alternate;
}


/* ================ Landing Sections ================ */

.sec-left-img{
  min-width: 550px;
}

.sec-right-img{
  min-width: 550px;
}

.sec-header{
  text-transform: uppercase;
  font-family: 'Amatic SC', sans-serif !important;
  font-size: 3rem !important;
  background: var(--brand-gradient-background-color);
  -webkit-background-clip: text;
  -webkit-text-fill-color: transparent;
  
}

.sec-text{
  color: #fff;
  font-weight: 700;
  letter-spacing: 1.5px;  /* Adjust this value to change the letter spacing */
  /* allows text to be highlightable over the border overlay with z-index:1 */
  z-index: 2;
}

.sec-btn{
  margin-top: 2em;
  margin-bottom: 1em;
  border: solid 2px #fff;
  color: #fff;
  padding: 2px 5px;
  text-transform: uppercase;
  transition: ease-in-out 0.9s;
  /* allows links to be clickable over the border overlay z-index:1 */
  z-index: 2;

}

/* ================ Landing Sections (Colors and Shapes) ================ */

.sec-left-orange{
  color: #fff;
  font-weight: 700;
  text-shadow: -2px 0 var(--brand-purple), 0 2px var(--brand-purple), 2px 0 var(--brand-purple), 0 -2px var(--brand-purple);
  letter-spacing: 1.5px;  /* Adjust this value to change the letter spacing */
}

.sec-left-orange-bg{
  position: relative;
}

.sec-left-orange-bg::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: -50;
  background-image: url('/images/shapes/brand-orange-shape-001.png');
  background-repeat: no-repeat;
  background-size: 100% 90%;
  opacity: 0.8;  /* Adjust this value to change the opacity */
}

.sec-right-purple{
  color: #fff;
  font-weight: 700;
  text-shadow: -2px 0 var(--brand-orange), 0 2px var(--brand-orange), 2px 0 var(--brand-orange), 0 -2px var(--brand-orange);
  letter-spacing: 1.5px;  /* Adjust this value to change the letter spacing */
}

.sec-right-purple-bg{
  position: relative;
}

.sec-right-purple-bg::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: -50;
  background-image: url('/images/shapes/brand-purple-shape-001.png');
  transform: scaleX(-1);
  background-repeat: no-repeat;
  background-size: 100% 90%;
  opacity: 0.8;  /* Adjust this value to change the opacity */
}

/* ================ Landing Sections (Gradients) ================ */

.sec-gradient-bg {
  position: relative !important;
}

.sec-gradient-bg::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: -50;
  background-image: url('/images/shapes/brandGradientBorder.png');
  background-repeat: no-repeat;
  background-size: 98% 90%;
  background-position: center;
}

.sec-gradient-bg-overlay {
  position: relative !important;
  width: 85%;
  transition: width 0.5s ease-in-out;
}

@media (max-width: 1245px) {
  .sec-gradient-bg-overlay {
    width: 90%;
  }
}

@media (max-width: 1165px) {
  .sec-gradient-bg-overlay {
    width: 100%;
  }
}

.sec-gradient-bg-overlay::before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 1;
  background-image: url('/images/shapes/brandGradientBorder.png');
  background-repeat: no-repeat;
  background-size: 98% 90%;
  background-position: center;
}

@media (max-width: 1024px) {
  .sec-gradient-bg::before {
    background-size: 97% 100%;
    background-image: url('/images/shapes/brandGradientBorderMD.png');
  }
}

@media (max-width: 768px) {
  .sec-gradient-bg::before {
    background-size: 97% 100%;
    background-image: url('/images/shapes/brandGradientBorder.png');
  }
}

/* ================ Slider ================ */
.slider-img {
  position: relative;
  display: flex;
  align-items: center;
  justify-content: center;
  width: 100%;
  overflow: hidden;
}

/* ================ Review Scroller ================ */
  /* 
   * Adjust height this value to match the height of your content 
   * position: relative; is important for the animation to work as it allows us to make both content bars 100vw wide
   */
.scrolling-review {
  overflow: hidden;
  display: flex;
  width: 2500px !important;
  position: relative;
  height: 15em; 
}

.scrolling-review-content{
  position: absolute;
  width: 100% !important; 
  animation: scroll 50s linear infinite;
}
.scrolling-review-content:hover{
  animation-play-state: paused;
}


.scrolling-review-content-bar-1 {
  display: flex;
  position: absolute;
  justify-content: space-around;
  width: 100% !important; 
  color: #fff;
  background: var(--brand-gradient-background-color);
}

  /* 
   * left: 100vw; places the content bar off screen to the right
   */
.scrolling-review-content-bar-2 {
  display: flex;
  position: absolute;
  left: 2499px;
  justify-content: space-around;
  width: 100% !important; /* Twice the width of the parent */
  color: #fff;
  background: var(--brand-gradient-background-reverse-color);
}

/* ================ Reviews ================ */
.review {
  color: #fff;
  width: 20em;
  height: 15em
}

.review-text{
  /* height: 8em; a height component here will stop text-overflow: ellipsis; from working */
  display: -webkit-box;
  -webkit-line-clamp: 3; /* number of lines to display */
  -webkit-box-orient: vertical;
  overflow: hidden;
  text-overflow: ellipsis;
}

.review-link{
  border: solid 2px #fff;
  margin-top: 20px;
  padding-left: 5px;
  padding-right: 5px;
  border-radius: 2.5px;
}

.review-google{
  display: flex;
  align-items: center;
  justify-content: center;
  height: 40px;
  width: 100vw;
  background-color: var(--brand-purple);
  transition: background-color ease-in-out 0.9s;
}
.review-google:hover{
  background-color: var(--brand-orange);
  transition: background-color ease-in-out 0.9s;
}

.review-google-link{
  color: #fff;
  font-weight: 700;
  width: 100%;
  height: 100%;
  text-align: center;
  padding-top: 0.5em;
}

/* ================ Map ================ */

.map{

}

.map-info{
  background-color: turquoise;
  display: flex;
  flex-direction: column;
  align-items: center;
  background-color: #000000;
  color: #fff;
  width: 100%;
  height: 100%;
  padding: 10px !important;
  background-image: url('/images/map/brandGradientMapInfoBorder.png');
  background-repeat: no-repeat;
  background-size: 100% 100%;
  background-position: center;
} 

.map-info-header{
  font-weight: 700;
}

.map-info-text{
  display: flex;
  flex-direction: column;
  align-items: center;
}

.map-info-link{
  color: blue;
}

.map-info-link:hover{
  text-decoration: underline;
  cursor: pointer;
}

/* ================ Animations ================ */

@keyframes orange-glow {
  from {
    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px var(--brand-neonorange), 0 0 20px var(--brand-neonorange), 0 0 25px var(--brand-neonorange), 0 0 30px var(--brand-neonorange), 0 0 35px var(--brand-neonorange);
  }
  to {
    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px #0073e6, 0 0 40px var(--brand-neonorange), 0 0 50px var(--brand-neonorange), 0 0 60px var(--brand-neonorange), 0 0 70px var(--brand-neonorange);
  }
}

@keyframes purple-glow {
  from {
    text-shadow: 0 0 5px #fff, 0 0 10px #fff, 0 0 15px var(--brand-neonpurple), 0 0 20px var(--brand-neonpurple), 0 0 25px var(--brand-neonpurple), 0 0 30px var(--brand-neonpurple), 0 0 35px var(--brand-neonpurple);
  }
  to {
    text-shadow: 0 0 10px #fff, 0 0 20px #fff, 0 0 30px var(--brand-neonpurple), 0 0 40px var(--brand-neonpurple), 0 0 50px var(--brand-neonpurple), 0 0 60px var(--brand-neonpurple), 0 0 70px var(--brand-neonpurple);
  }
}

@keyframes scroll {
  0% {
      transform: translateX(0);
  }
  100% {
      transform: translateX(-100%);
  }
}

